--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <section class="gallery">
     <h2>📸 Our Beautiful Memories</h2>
     <div class="photo-grid">
-      <div class="photo polaroid"><img src="https://via.placeholder.com/200" alt=""><p>First trip 💕</p></div>
-      <div class="photo polaroid"><img src="https://via.placeholder.com/200" alt=""><p>Your smile 😍</p></div>
-      <div class="photo polaroid"><img src="https://via.placeholder.com/200" alt=""><p>Laughs together 🎉</p></div>
+      <div class="photo polaroid"><img src="IMG_1879.jpg" alt=""><p>First trip 💕</p></div>
+      <div class="photo polaroid"><img src="IMG_1880.jpg" alt=""><p>Your smile 😍</p></div>
+      <div class="photo polaroid"><img src="1000045725.jpg" alt=""><p>Laughs together 🎉</p></div>
     </div>
   </section>
   <section class="jokes">
@@ -153,3 +153,4 @@ function launchConfetti() {
   <script src="script.js"></script>
 </body>
 </html>
+
