--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="photo-grid">
       <div class="photo polaroid"><img src="IMG_1879.jpg" alt=""><p>First trip 💕</p></div>
       <div class="photo polaroid"><img src="IMG_1880.jpg" alt=""><p>Your smile 😍</p></div>
-      <div class="photo polaroid"><img src="1000045725.jpg" alt=""><p>Laughs together 🎉</p></div>
+      <div class="photo polaroid"><img src="1000045725.JPG" alt=""><p>Laughs together 🎉</p></div>
     </div>
   </section>
   <section class="jokes">
@@ -153,4 +153,5 @@ function launchConfetti() {
   <script src="script.js"></script>
 </body>
 </html>
+
 
